@@ -1,6 +1,7 @@
 /****************************************************************************************
  * Copyright (c) 2007 Maximilian Kossick <maximilian.kossick@googlemail.com>            *
  * Copyright (c) 2008 Seb Ruiz <ruiz@kde.org>                                           *
+ * Copyright (c) 2012 Matěj Laitl <matej@laitl.cz>                                      *
  *                                                                                      *
  * This program is free software; you can redistribute it and/or modify it under        *
  * the terms of the GNU General Public License as published by the Free Software        *
@@ -68,8 +69,8 @@ class EditCapabilityImpl : public Capabilities::EditCapability
         virtual void setComment( const QString &newComment ) { m_track->setComment( newComment ); }
         virtual void setTrackNumber( int newTrackNumber ) { m_track->setTrackNumber( newTrackNumber ); }
         virtual void setDiscNumber( int newDiscNumber ) { m_track->setDiscNumber( newDiscNumber ); }
-        virtual void beginMetaDataUpdate() { m_track->beginMetaDataUpdate(); }
-        virtual void endMetaDataUpdate() { m_track->endMetaDataUpdate(); }
+        virtual void beginMetaDataUpdate() { m_track->beginUpdate(); }
+        virtual void endMetaDataUpdate() { m_track->endUpdate(); }
 
     private:
         KSharedPtr<MetaFile::Track> m_track;
@@ -165,13 +166,7 @@ Track::Track( const KUrl &url )
     : Meta::Track()
     , d( new Track::Private( this ) )
 {
-    /* HACK: readMetaData() below may cause notifyObservers() to be called, and if there
-     * are some observers, KSharedPtr to this track is created and destoroyed, which
-     * destroys the track being constucted in turn -> BOOM! prevent this by temporarily
-     * increasing the reference count. */
-    ref.ref();
     d->url = url;
-    d->statsStore = new UrlStatisticsStore( this );
     d->readMetaData();
     d->album = Meta::AlbumPtr( new MetaFile::FileAlbum( d ) );
     d->artist = Meta::ArtistPtr( new MetaFile::FileArtist( d ) );
@@ -179,7 +174,6 @@ Track::Track( const KUrl &url )
     d->genre = Meta::GenrePtr( new MetaFile::FileGenre( d ) );
     d->composer = Meta::ComposerPtr( new MetaFile::FileComposer( d ) );
     d->year = Meta::YearPtr( new MetaFile::FileYear( d ) );
-    ref.deref();
 }
 
 Track::~Track()
@@ -270,99 +264,57 @@ Track::year() const
 void
 Track::setAlbum( const QString &newAlbum )
 {
-    DEBUG_BLOCK
-    d->changes.insert( Meta::valAlbum, QVariant( newAlbum ) );
-    debug() << "CHANGES HERE: " << d->changes;
-    if( !d->batchUpdate )
-    {
-        d->m_data.album = newAlbum;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valAlbum, newAlbum );
 }
 
 void
 Track::setAlbumArtist( const QString &newAlbumArtist )
 {
-    DEBUG_BLOCK
-    d->changes.insert( Meta::valAlbumArtist, QVariant( newAlbumArtist ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.albumArtist = newAlbumArtist;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valAlbumArtist, newAlbumArtist );
 }
 
 void
-Track::setArtist( const QString& newArtist )
+Track::setArtist( const QString &newArtist )
 {
-    d->changes.insert( Meta::valArtist, QVariant( newArtist ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.artist = newArtist;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valArtist, newArtist );
 }
 
 void
-Track::setGenre( const QString& newGenre )
+Track::setGenre( const QString &newGenre )
 {
-    d->changes.insert( Meta::valGenre, QVariant( newGenre ) );
-    if( !d->batchUpdate )
-    {
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valGenre, newGenre );
 }
 
 void
-Track::setComposer( const QString& newComposer )
+Track::setComposer( const QString &newComposer )
 {
-    d->changes.insert( Meta::valComposer, QVariant( newComposer ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.composer = newComposer;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valComposer, newComposer );
 }
 
 void
 Track::setYear( int newYear )
 {
-    d->changes.insert( Meta::valYear, QVariant( newYear ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.year = newYear;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valYear, newYear );
 }
 
 void
 Track::setTitle( const QString &newTitle )
 {
-    d->changes.insert( Meta::valTitle, QVariant( newTitle ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.title = newTitle;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valTitle, newTitle );
 }
 
 void
 Track::setBpm( const qreal newBpm )
 {
-    d->changes.insert( Meta::valBpm, QVariant( newBpm ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.bpm = newBpm;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valBpm, newBpm );
 }
 
 qreal
@@ -384,13 +336,8 @@ Track::comment() const
 void
 Track::setComment( const QString& newComment )
 {
-    d->changes.insert( Meta::valComment, QVariant( newComment ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.comment = newComment;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valComment, newComment );
 }
 
 int
@@ -402,13 +349,8 @@ Track::trackNumber() const
 void
 Track::setTrackNumber( int newTrackNumber )
 {
-    d->changes.insert( Meta::valTrackNr, QVariant( newTrackNumber ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.trackNumber = newTrackNumber;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valTrackNr, newTrackNumber );
 }
 
 int
@@ -420,13 +362,8 @@ Track::discNumber() const
 void
 Track::setDiscNumber( int newDiscNumber )
 {
-    d->changes.insert( Meta::valDiscNr, QVariant ( newDiscNumber ) );
-    if( !d->batchUpdate )
-    {
-        d->m_data.discNumber = newDiscNumber;
-        d->writeMetaData();
-        notifyObservers();
-    }
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valDiscNr, newDiscNumber );
 }
 
 qint64
@@ -519,19 +456,19 @@ Track::isTrack( const KUrl &url )
 }
 
 void
-Track::beginMetaDataUpdate()
+Track::beginUpdate()
 {
-    d->batchUpdate = true;
+    QWriteLocker locker( &d->lock );
+    d->batchUpdate++;
 }
 
 void
-Track::endMetaDataUpdate()
+Track::endUpdate()
 {
-    DEBUG_BLOCK
-    debug() << "CHANGES HERE: " << d->changes;
-    d->writeMetaData();
-    d->batchUpdate = false;
-    notifyObservers();
+    QWriteLocker locker( &d->lock );
+    Q_ASSERT( d->batchUpdate > 0 );
+    d->batchUpdate--;
+    commitIfInNonBatchUpdate();
 }
 
 bool
@@ -606,9 +543,46 @@ Track::createCapabilityInterface( Capabilities::Capability::Type type )
 Meta::StatisticsPtr
 Track::statistics()
 {
-    if( d->statsStore )
-        return d->statsStore;
-    return Meta::Track::statistics();
+    return Meta::StatisticsPtr( this );
+}
+
+double
+Track::score() const
+{
+    return d->m_data.score;
+}
+
+void
+Track::setScore( double newScore )
+{
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valScore, newScore );
+}
+
+int
+Track::rating() const
+{
+    return d->m_data.rating;
+}
+
+void
+Track::setRating( int newRating )
+{
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valRating, newRating );
+}
+
+int
+Track::playCount() const
+{
+    return d->m_data.playCount;
+}
+
+void
+Track::setPlayCount( int newPlayCount )
+{
+    QWriteLocker locker( &d->lock );
+    commitIfInNonBatchUpdate( Meta::valPlaycount, newPlayCount );
 }
 
 QImage
@@ -618,6 +592,36 @@ Track::getEmbeddedCover() const
         return Meta::Tag::embeddedCover( d->url.path()  );
 
     return QImage();
+}
+
+void
+Track::commitIfInNonBatchUpdate( qint64 field, const QVariant &value )
+{
+    d->changes.insert( field, value );
+    commitIfInNonBatchUpdate();
+}
+
+void
+Track::commitIfInNonBatchUpdate()
+{
+    static const QSet<qint64> statFields = ( QSet<qint64>() << Meta::valFirstPlayed <<
+        Meta::valLastPlayed << Meta::valPlaycount << Meta::valScore << Meta::valRating );
+
+    if( d->batchUpdate > 0 || d->changes.isEmpty() )
+        return;
+
+    // special case (shortcut) when writing statistics is disabled
+    if( !AmarokConfig::writeBackStatistics() &&
+        (QSet<qint64>::fromList( d->changes.keys() ) - statFields).isEmpty() )
+    {
+        d->changes.clear();
+        return;
+    }
+
+    d->writeMetaData(); // clears d->chages
+    d->lock.unlock(); // rather call notifyObservers() without a lock
+    notifyObservers();
+    d->lock.lockForWrite(); // return to original state
 }
 
 #include "File.moc"
