@@ -13,6 +13,8 @@ VERSION 2.7-Beta 1
     * Amazon store: We now ship a utility to handle downloads from Amazon.
 
   CHANGES:
+    * Statistics of tracks outside of collections are only read/saved to file
+      tags (if enabled) instead of being kept in the database.
     * Last.fm Skip button removed; Last.fm API no longer provides it. (BR 305576)
     * Optional liblastfm dependency raised to 1.0.0. (BR 302597)
     * Add composer button to wikipedia applet (BR 272982)
